--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": ">=7.4",
     "phpunit/phpunit": "^9.5",
-    "league/csv": "^9.8"
+    "symfony/var-dumper": "^5.4"
   },
   "autoload": {
     "psr-4": {
